Fixing list alignment

--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,4 +1,5 @@
 .list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
